2013-08-25  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add "boolean=?".

	* standard/Scheme.java (initScheme): Add "string-copy!"
	and "square".

	* standard/Scheme.java (initScheme): Add "make-list".

2013-07-29  Matthieu Vachon  <matthieu.o.vachon@gmail.com>

	* standard/define_alias.java: Implemented define-private-alias
	syntax. This syntax is equivalent to define-alias except it is
	private by default.
	* standard/Scheme.java: Added define-private-alias binding.

2013-07-16  Per Bothner  <per@bothner.com>

	* lang/Quote.java (expand_pair): Fix bug in handling of nested (i.e.
	doubly quasi-quoted) unquote-splicing.  Simplify to be (almost)
	like handling of plain unquote.
	This fixes Savannah bug #39501 "invalid use of unquote-splicing".

2013-06-27  Per Bothner  <per@bothner.com>

	* standard/define.java (scanForm): Don't set writable if
	this is define-constant.

2013-06-16  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge in file lists from lang/Makefile.am
	and standard/makefile.am.
	(SUBDIRS): Change to just libs.
	* lang/Makefile.am: Removed.
	* standard/Makefile.am: Removed.

2013-06-10  Per Bothner  <per@bothner.com>

	* lang/Quote.java (expand_pair): Return a unknown-namespace symbol
	where we before made a SimpleSymbol containing a ':'.
	* lang/Translator.java (rewrite_lookup): New method.
	(rewrite): Handle unknown-namespace Symbol.
	(namespaceResolve): Likewise.

2013-06-08  Per Bothner  <per@bothner.com>

	* lang/Translator.java (rewrite): When in a method and checking
	if inherited class members are in scope, don't accept a mangled
	match if an exact match is in the regular scope.
	This fixes Savannah bug #39048 "Bad method call resolution?".

2013-05-26  Per Bothner  <per@bothner.com>

	* Shell.java (run): If evalModule fails, throw SyntaxException,
	which when handled produces better error messages.

2013-03-25  Per Bothner  <per@bothner.com>
