@@ -707,6 +707,9 @@ public class Scheme extends LispLanguage
       defProcStFld("tokenize-string-using-shell", "kawa.lib.system");
       defProcStFld("command-parse", "kawa.lib.system");
       defProcStFld("process-command-line-assignments", "kawa.lib.system");
+      defProcStFld("current-second", "kawa.lib.system");
+      defProcStFld("current-jiffy", "kawa.lib.system");
+      defProcStFld("jiffies-per-second", "kawa.lib.system");
       
       defProcStFld("record-accessor", "kawa.lib.reflection");
       defProcStFld("record-modifier", "kawa.lib.reflection");
